Changes to the template and made a lot of links, no menu no content yet

--- a/htdocs/atlas-point1/operation.html
+++ b/htdocs/atlas-point1/operation.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>ATLAS Experiment</title>
+<title>ATLAS Detector Operation</title>
 <link rel="stylesheet" type="text/css" href="css/style.css" />
 <!--[if lt IE 8]>
 <script src="script/IE8.js" type="text/javascript"></script>
@@ -18,17 +18,17 @@
 <div id="wrapper">
 	<div id="topRow">
     	<div id="login" class="container"><a href="#" class="loginBtn">Login</a>
-        	 <div class="slogun"><p>European Organization for Nuclear Research</p></div>
+        	 <div class="slogun"><p><a href="http://www.cern.ch">European Organization for Nuclear Research</a></p></div>
              <div class="clearfix"></div>
         </div>       
     </div><!--end tophead-->
     <div id="header">
-    	<div id="logoWp" class="container"><h1><a href="index.html">Atlas Experiment</a></h1>
+    	<div id="logoWp" class="container"><h1><a href="http://atlas.web.cern.ch/Atlas/Collaboration/index.php">Atlas Experiment</a></h1>
            	<ul class="topNav">
-            	<li><a href="index.html" class="active">Collaboration</a></li>
-                <li><em></em><a href="atlas_live.html" >ATLAS Live</a></li>
-                <li><em></em><a href="#">ATLAS Public</a></li>
-                <li class="last-child"><em></em><a href="#">Contact us</a></li>
+            	<li><a href="http://atlas.web.cern.ch/Atlas/Collaboration/index.php" class="active">Collaboration</a></li>
+                <li><em></em><a href="http://atlas.web.cern.ch/Atlas/Collaboration/atlas_live.php" >ATLAS Now</a></li>
+                <li><em></em><a href="http://atlas.ch/">ATLAS Public</a></li>
+                <li class="last-child"><em></em><a href="http://www.cern.ch">CERN&nbsp;</a></li>
             </ul>
             <div class="clearfix"></div>
         </div>
@@ -36,14 +36,14 @@
     <div id="mainWp">
     	<div id="content" class="container">
         	<div class="topSubBtns">
-                <p class="headerTxt">Data Preparation</p>
+                <p class="headerTxt">Detector Operation</p>
                 <ul class="btnsLink">
-                    <li class="genBtn1"><a href="#">Genaral</a></li>
-                    <li class="detBtn2"><a href="#">Detector Operation</a></li>
-                    <li class="comSoftBtn3"><a href="#">Computing &amp; Software </a></li>
-                    <li class="trigBtn4"><a href="#">Trigger</a></li>
-                    <li class="dataBtn5"><a href="#" class="active">Data Preparation</a></li>
-                    <li class="phyBtn6"><a href="#">Physics</a></li>
+                    <li class="genBtn1"><a href="#">General</a></li>
+                    <li class="detBtn2"><a href="operation.html" class="active">Detector Operation</a></li>
+                    <li class="trigBtn4"><a href="https://twiki.cern.ch/twiki/bin/view/Atlas/AtlasTrigger">Trigger</a></li>
+                    <li class="comSoftBtn3"><a href="https://twiki.cern.ch/twiki/bin/view/Atlas/AtlasComputing">Computing &amp; Software </a></li>
+                    <li class="dataBtn5"><a href="https://twiki.cern.ch/twiki/bin/view/Atlas/DataPreparation">Data Preparation</a></li>
+                    <li class="phyBtn6"><a href="https://twiki.cern.ch/twiki/bin/view/AtlasProtected/AtlasPhysics">Physics</a></li>
                 </ul>
             </div>
             <div class="dataPreBox">
@@ -89,7 +89,7 @@
                                 <li><a href="#">Mailing List</a></li>
                                 <li><a href="#">Notes (CDS)</a></li>
                                 <li><a href="#">Proposal & TDR</a></li>
-                                <li> <a href="#">Theses</a></li>
+                                <li><a href="#">Theses</a></li>
                                 <li><a href="#">Women Group</a></li>
                                 <li><a href="#">Juniors Seminars</a> </li>
                                 <li><a href="#">arXiv</a></li>
@@ -196,7 +196,7 @@
         </div><!--end content-->
     </div><!--end mainWp-->
     <div id="footer">
-    	<div id="copyright" class="container"><p>Copyright© 2009 CERN</p></div>
+    	<div id="copyright" class="container"><p>Copyright© 2010 CERN - <a href="mailto:Mark.Donszelmann@cern.ch">ATLAS Web Communications</a></p></div>
     </div>
     
 	
