--- a/htdocs/atlas-point1/operation.html
+++ b/htdocs/atlas-point1/operation.html
@@ -142,9 +142,7 @@
                     	<h3>Run Program</h3>
                         <div class="subBoxOpen">
                         	<div class="datapreInside">
-                                <!-- <h6>Program of the Day</h6> -->
-                                <iframe src="https://atlasop.cern.ch/atlas-point1/wmi/current/Run Status_wmi/AtlasRunCom.html" width="100%" 
-height="160"></iframe>
+                        		<iframe src="https://atlasop.cern.ch/atlas-point1/wmi/current/Run Status_wmi/AtlasRunCom.html" width="100%" height="160"></iframe>
                             </div>
                         </div>                       
                     </div>
@@ -235,9 +233,7 @@ height="160"></iframe>
                     	<h3>Posted News</h3>
                         <div class="subBoxOpen">
                         	<div class="datapreInside">
-                                <!-- <h6>Program of the Day</h6> -->
-                                <iframe src="https://atlasop.cern.ch/atlas-point1/events.html" width="100%" 
-height="100"></iframe>
+                                <iframe src="https://atlasop.cern.ch/atlas-point1/events.html" width="100%" height="100"></iframe>
                             </div>
                         </div>
                     </div>             	
