Fixed parsing of Run Status

--- a/htdocs/atlas-point1/wmi/current/Run Status_wmi/ATLAS.html
+++ b/htdocs/atlas-point1/wmi/current/Run Status_wmi/ATLAS.html
@@ -6,7 +6,7 @@
 <tr><td align="center"><font size="6" color="#b73c3c"><b>Partition ATLAS</b></font>
 </td>
 </tr>
-<tr><td align="center"><font size="1" color="#3c3cb7"><i>TTC Partitions: SCT BA - SCT BC - SCT EA - SCT EC - TRT BA - TRT BC - TRT EA - TRT EC - LAr EMBA - LAr EMBC - LAr EMECA - LAr EMECC - LAr HECA - LAr HECC - LAr FCALA - LAr FCALC - Til BA - Til BC - Til EA - Til EC - MDT BA - MDT BC - MDT EA - MDT EC - RPC BA - RPC BC - TGC EA - TGC EC - CSC EA - CSC EC - L1 calo preprocessor - L1 calo cluster DAQ - L1 calo cluster RoI - L1 calo Jet/E DAQ - L1 calo Jet/E RoI - MUCTPI - CTP - L2SV - SFI - SFO - LVL2 - EF - BCM - Lucid - </i></font>
+<tr><td align="center"><font size="1" color="#3c3cb7"><i>TTC Partitions: Pix Barrel - Pix Disk - Pix B-Layer - SCT BA - SCT BC - SCT EA - SCT EC - TRT BA - TRT BC - TRT EA - TRT EC - LAr EMBA - LAr EMBC - LAr EMECA - LAr EMECC - LAr HECA - LAr HECC - LAr FCALA - LAr FCALC - Til BA - Til BC - Til EA - Til EC - MDT BA - MDT BC - MDT EA - MDT EC - RPC BA - RPC BC - TGC EA - TGC EC - CSC EA - CSC EC - L1 calo preprocessor - L1 calo cluster DAQ - L1 calo cluster RoI - L1 calo Jet/E DAQ - L1 calo Jet/E RoI - MUCTPI - CTP - L2SV - SFI - SFO - LVL2 - EF - BCM - Lucid - ZDC - </i></font>
 </td>
 </tr>
 </table><hr />
@@ -28,7 +28,7 @@
 </tr>
 <tr><td bgcolor="#dbeffb"><table bgcolor="#f0f0f0" width="100%" height="100%">
 <tr><td bgcolor="#dbeffb"><b>Run State</b></td>
-<td bgcolor="#ffffff"><font size="4" color="#00ff00">RUNNING</font>
+<td bgcolor="#ffffff"><font size="4" color="#228b22">NONE</font>
 </td>
 </tr>
 <tr><td bgcolor="#dbeffb"><b>Run Tag</b></td>
@@ -38,21 +38,21 @@
 <td bgcolor="#ffffff">Physics</td>
 </tr>
 <tr><td bgcolor="#dbeffb"><b>Run Number</b></td>
-<td bgcolor="#ffffff">152054</td>
+<td bgcolor="#ffffff">152155</td>
 </tr>
 </table></td>
 <td bgcolor="#ffffff"><table bgcolor="#f0f0f0" width="100%" height="100%">
 <tr><td bgcolor="#dbeffb"><b>RunTime</b></td>
-<td bgcolor="#ffffff">15:16:23</td>
+<td bgcolor="#ffffff">25:28:01</td>
 </tr>
 <tr><td bgcolor="#dbeffb"><b>Luminosity Block</b></td>
-<td bgcolor="#ffffff">458</td>
+<td bgcolor="#ffffff">783</td>
 </tr>
 <tr><td bgcolor="#dbeffb"><b>Average Event Size [MB]</b></td>
-<td bgcolor="#ffffff">4.304</td>
+<td bgcolor="#ffffff">4.500</td>
 </tr>
 <tr><td bgcolor="#dbeffb"><b>Throughput to Disk [MB/s]</b></td>
-<td bgcolor="#ffffff">177.573</td>
+<td bgcolor="#ffffff">0</td>
 </tr>
 </table></td>
 <td bgcolor="#dbeffb"><table bgcolor="#f0f0f0" width="100%" height="100%">
@@ -60,10 +60,10 @@
 <td bgcolor="#ffffff">752</td>
 </tr>
 <tr><td bgcolor="#dbeffb"><b>L1 / HLT Prescale</b></td>
-<td bgcolor="#ffffff">1245 / 1146</td>
+<td bgcolor="#ffffff">1258 / 1153</td>
 </tr>
 <tr><td bgcolor="#dbeffb"><b>L1 Bunch Group</b></td>
-<td bgcolor="#ffffff">46</td>
+<td bgcolor="#ffffff">48</td>
 </tr>
 <tr><td bgcolor="#dbeffb"><b>HLT Release Version</b></td>
 <td bgcolor="#ffffff">15.5.6.5</td>
@@ -86,99 +86,9 @@
 </tr>
 </table></td>
 </tr>
-<tr><td align="center"><font size="5" color="#3c3cb7"><b>Busy Status</b></font>
-</td>
+<tr><td>&nbsp</td>
 </tr>
-<tr><td align="center"><table bgcolor="#f0f0f0">
-<tr><td bgcolor="#004080"><font size="2" color="#ffffff"><b>CTPMI</b></font>
-</td>
-<td bgcolor="#004080">&nbsp</td>
-<td bgcolor="#004080"><font size="2" color="#ffffff"><b>CTPCORE</b></font>
-</td>
-<td bgcolor="#004080">&nbsp</td>
-<td bgcolor="#004080"><font size="2" color="#ffffff"><b>CTPOUT 12</b></font>
-</td>
-<td bgcolor="#004080">&nbsp</td>
-<td bgcolor="#004080"><font size="2" color="#ffffff"><b>CTPOUT 13</b></font>
-</td>
-<td bgcolor="#004080">&nbsp</td>
-<td bgcolor="#004080"><font size="2" color="#ffffff"><b>CTPOUT 14</b></font>
-</td>
-<td bgcolor="#004080">&nbsp</td>
-<td bgcolor="#004080"><font size="2" color="#ffffff"><b>CTPOUT 15</b></font>
-</td>
-<td bgcolor="#004080">&nbsp</td>
-</tr>
-<tr><td bgcolor="#dbeffb"><b>VME</b></td>
-<td bgcolor="#ffffff">0%</td>
-<td bgcolor="#dbeffb"><b>Backplane</b></td>
-<td bgcolor="#ffffff" align="center">1.145%</td>
-<td bgcolor="#dbeffb"><b>CTP(LUCID)</b></td>
-<td bgcolor="#ffffff">0%</td>
-<td bgcolor="#dbeffb"><b>BCM</b></td>
-<td bgcolor="#ffffff">0%</td>
-<td bgcolor="#dbeffb"><b>LHCf</b></td>
-<td bgcolor="#ffffff"><font size="4" color="#969796">OUT</font>
-</td>
-<td bgcolor="#dbeffb"><b>CSC</b></td>
-<td bgcolor="#ffffff">0%</td>
-</tr>
-<tr><td bgcolor="#dbeffb"><b>ECR</b></td>
-<td bgcolor="#ffffff">0.040%</td>
-<td bgcolor="#dbeffb"><b>Result</b></td>
-<td bgcolor="#ffffff" align="center">1.145%</td>
-<td bgcolor="#dbeffb"><b>Pixel    </b></td>
-<td bgcolor="#ffffff"><font size="4" color="#969796">OUT</font>
-</td>
-<td bgcolor="#dbeffb"><b>ZDC</b></td>
-<td bgcolor="#ffffff"><font size="4" color="#969796">OUT</font>
-</td>
-<td bgcolor="#dbeffb"><b>MDT B</b></td>
-<td bgcolor="#ffffff">0.001%</td>
-<td bgcolor="#dbeffb"><b>ALFA</b></td>
-<td bgcolor="#ffffff"><font size="4" color="#969796">OUT</font>
-</td>
-</tr>
-<tr><td bgcolor="#dbeffb"><b>Veto 0</b></td>
-<td bgcolor="#ffffff">0%</td>
-<td bgcolor="#dbeffb">&nbsp</td>
-<td bgcolor="#ffffff">&nbsp</td>
-<td bgcolor="#dbeffb"><b>SCT</b></td>
-<td bgcolor="#ffffff">0%</td>
-<td bgcolor="#dbeffb"><b>LAr H/F</b></td>
-<td bgcolor="#ffffff">0%</td>
-<td bgcolor="#dbeffb"><b>MDT EC</b></td>
-<td bgcolor="#ffffff">0%</td>
-<td bgcolor="#dbeffb"><b>TGC</b></td>
-<td bgcolor="#ffffff">0%</td>
-</tr>
-<tr><td bgcolor="#dbeffb"><b>Veto 1</b></td>
-<td bgcolor="#ffffff">0%</td>
-<td bgcolor="#dbeffb">&nbsp</td>
-<td bgcolor="#ffffff">&nbsp</td>
-<td bgcolor="#dbeffb"><b>TRT</b></td>
-<td bgcolor="#ffffff">1.104%</td>
-<td bgcolor="#dbeffb"><b>LAr EMEC</b></td>
-<td bgcolor="#ffffff">0%</td>
-<td bgcolor="#dbeffb"><b>Tile EB</b></td>
-<td bgcolor="#ffffff">0%</td>
-<td bgcolor="#dbeffb"><b>RPC</b></td>
-<td bgcolor="#ffffff">0%</td>
-</tr>
-<tr><td bgcolor="#dbeffb"><b>Backplane</b></td>
-<td bgcolor="#ffffff">1.145%</td>
-<td bgcolor="#dbeffb">&nbsp</td>
-<td bgcolor="#ffffff">&nbsp</td>
-<td bgcolor="#dbeffb"><b>L1Calo</b></td>
-<td bgcolor="#ffffff">0%</td>
-<td bgcolor="#dbeffb"><b>LAr EMB</b></td>
-<td bgcolor="#ffffff">0%</td>
-<td bgcolor="#dbeffb"><b>Tile LB</b></td>
-<td bgcolor="#ffffff">0%</td>
-<td bgcolor="#dbeffb"><b>MUCTPI</b></td>
-<td bgcolor="#ffffff">0%</td>
-</tr>
-</table></td>
+<tr><td>&nbsp</td>
 </tr>
 <tr><td align="center"><img src="../WTRP_wmi/pot_globalRates_0.png" width="1000" height="380" /><br />
 </td>
@@ -189,7 +99,7 @@
 <font size="5" color="#3c3cb7"><b>Data Quality Monitoring Page</b></font>
 <iframe src="../Data%20Quality%20Monitoring_wmi/ATLAS.html" name="DQ" width="100%" height="500" >
 </iframe>
-<br /><font size="2" color="#555555"><sub>Last updated: Fri Mar 26 14:40:10 2010
+<br /><font size="2" color="#555555"><sub>Last updated: Mon Mar 29 12:11:10 2010
 </sub></font>
 </body>
 </html>
